<resources>
    <string name="app_name">OutGoer</string>
    <string name="username_hint">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="go_to_sign_up">Don\'t have an account?</string>
    <string name="mail_hint">example@mail.com</string>
    <string name="set_username_hint">Enter username</string>
    <string name="set_password_hint">Enter password</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="go_to_sign_in">Already have an account?</string>
    <string name="forgot_your_pass">Forgot your password?</string>
    <string name="pass_reset_request_info">We will send a reset code to given email address</string>
    <string name="enter_mail_hint">Enter you email</string>
    <string name="send">Send</string>
    <string name="enter_reset_code">Enter reset code</string>
    <string name="reset_code_info">Enter the code you received on your email</string>
    <string name="reset_code_hint">Reset code</string>
    <string name="verify">Verify</string>
    <string name="reset_pass">Reset your password</string>
    <string name="reset_pass_info">Enter the new password</string>
    <string name="enter_new_pass">New password</string>
    <string name="confirm_new_pass">Confirm password</string>
    <string name="change">Change</string>

    <!--warnings-->
    <string name="no_username_error">Username field is empty!</string>
    <string name="no_pass_error">Password field is empty!</string>
    <string name="no_repeat_pass_error">You have to confirm the password!</string>
    <string name="different_passwords_error">The passwords are not matching!</string>
    <string name="no_mail_error">Email field is empty!</string>
</resources>
