<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/login_edit_text_width"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/person_outline"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/login_edit_text_width"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/lock_outline"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/sign_in"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:text="@string/forgot_password" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:clickable="true"
        android:text="@string/go_to_sign_up" />

</merge>
