<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/reset_header"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgot_your_pass"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/reset_info"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:text="@string/pass_reset_request_info" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="@dimen/login_edit_text_width"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/lock_outline"
        android:hint="@string/enter_new_pass"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="@dimen/login_edit_text_width"
        android:layout_height="@dimen/login_edit_text_height"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_edit_text"
        android:drawableLeft="@drawable/mail_outline"
        android:hint="@string/enter_mail_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <Button
        android:id="@+id/send_reset_btn"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/send"
        android:textAllCaps="false" />

</merge>
